[no-jira] Initial logic for word counter